src/test/ui/dollar-crate/dollar-crate-is-keyword-2.stderr
error[E0433]: failed to resolve: `$crate` in paths can only be used in start position
  --> $DIR/dollar-crate-is-keyword-2.rs:6:16
   |
LL |         use a::$crate::b;
   |                ^^^^^^ `$crate` in paths can only be used in start position
...
LL | m!();
   | ----- in this macro invocation

error[E0432]: unresolved import `a::$crate`
  --> $DIR/dollar-crate-is-keyword-2.rs:5:13
   |
LL |         use a::$crate;
   |             ^^^^^^^^^ no `$crate` in `a`
...
LL | m!();
   | ----- in this macro invocation

error[E0433]: failed to resolve: `$crate` in paths can only be used in start position
  --> $DIR/dollar-crate-is-keyword-2.rs:7:21
   |
LL |         type A = a::$crate;
   |                     ^^^^^^ `$crate` in paths can only be used in start position
...
LL | m!();
   | ----- in this macro invocation

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
